<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="loginViewModel"
            type="goforfit.com.sportsaddakotlin.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity"
        android:weightSum="2.5"
        android:orientation="vertical"
        android:background="@android:color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            >

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:text="@={loginViewModel.userPassword}"
                android:inputType="textPassword"
                android:background="@drawable/edittext_background"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="12dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_centerVertical="true"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/edit_text_hint_color"
                android:textColor="@android:color/white"
                />

            <EditText
                android:id="@+id/user_contact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={loginViewModel.userContact}"
                android:hint="@string/mobile_number"
                android:background="@drawable/edittext_background"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:inputType="number"
                android:layout_above="@+id/user_password"
                android:drawableStart="@drawable/ic_action_phone"
                android:drawablePadding="2dp"
                android:textColorHint="@color/edit_text_hint_color"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:textSize="@dimen/heading_size"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/user_contact"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forget_password"
                android:textColor="@android:color/white"
                android:text="@string/forgot_password"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="35dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/user_password"
                android:gravity="end"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn"
                android:background="@drawable/login_btn_back"
                android:textColor="@android:color/white"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/forget_password"
                android:layout_centerHorizontal="true"
                android:onClick="@{()->loginViewModel.checkFields()}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_link"
                android:textColor="@color/colorPrimary"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/sign_up_link"
                android:layout_below="@+id/login_btn"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="60dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/facebook_back_color"
                android:gravity="center_horizontal"
                android:id="@+id/facebook_login_btn"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/facebook_icon"
                    android:src="@drawable/fb"
                    android:layout_marginEnd="15dp"
                    android:paddingBottom="5dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/login_with_facebook"
                    android:layout_toEndOf="@+id/facebook_icon"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/glpus_back_color"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/gmail_login_btn">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/google_icon"
                    android:src="@drawable/gplus_icon"
                    android:layout_marginEnd="15dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/login_with_google"
                    android:layout_toEndOf="@+id/google_icon"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    />

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>


</layout>