<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProductsActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/progress_bar"
        android:layout_centerInParent="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/product_details_layout"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/cart_product_image"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_name"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_margin="15dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_desc_label"
                android:layout_margin="15dp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_desc"
                android:textSize="13sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/terms_and_conditions_label"
                android:layout_margin="15dp"
                android:text="@string/terms_and_conditions"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/terms_and_conditions"
                android:textSize="13sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="60dp"/>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_tenure_btn"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="15dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/product_tenure"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/choose_your_tenure"
            android:textStyle="bold"
            android:gravity="center_vertical|end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>

</RelativeLayout>
